rns-lang/tests/snapshots/err-lexer-integers-minus_only.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.code -

----- STDOUT -----

----- STDERR -----
Error: invalid integer
   ╭─[ test_data/integration/err/lexer/integers/minus_only.ja:1:7 ]
   │
 1 │ .code -
   │       ┬  
   │       ╰── '-' is not a valid integer
   │ 
   │ Note: Integers must be between -2147483648 and 2147483647
───╯
